--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "OracleConnection": "User Id=sis;Password=sis100;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.10.10.58)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=hanil)(SRVR=DEDICATED)));"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   }
 }
