--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "eaehKYOi6VhMDQi6",
+    "Issuer": "GIT_KOREA_QA_API",
+    "Audience": "GIT_KOREA_QA_API_USER",
+    "DurationInMinutes": 30,
+    "RefreshDurationMinutes": 10080
+  }
 }
