--- a/GIT_KOREA_QA_API.csproj
+++ b/GIT_KOREA_QA_API.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
 	<Folder Include="Filters\" />
     <Folder Include="Middleware\" />
-	<Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
