--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "OracleConnection": "User Id=sis;Password=sis100;Data Source=10.10.10.58:1521/hanil;Server=DEDICATED;"
   },
+  "UploadSettings": {
+    "FolderPath": "Uploads",
+    "MaxFileSize": 52428800, // 50MB
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".pdf", ".doc", ".docx", ".xls", ".xlsx" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
