--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OracleConnection": "User Id=sis;Password=sis100;Data Source=10.10.10.58:1521/hanil;Server=DEDICATED;"
+    "OracleConnection": "User Id=sis;Password=sis100;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.10.10.58)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=hanil)));"
   },
   "UploadSettings": {
     "FolderPath": "Uploads",
