--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -12,5 +12,12 @@
       "Default": "Warning",
       "Microsoft.AspNetCore": "Error"
     }
+  },
+  "Jwt": {
+    "Key": "q1Y8kAHJFibObefsD0YntobcjDTk5F8J",
+    "Issuer": "GIT_KOREA_QA_API",
+    "Audience": "GIT_KOREA_QA_API_USER",
+    "DurationInMinutes": 30,
+    "RefreshDurationMinutes": 10080
   }
 }
