DateTime KST 적용

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Globalization": {
+    "DefaultCulture": "ko-KR",
+    "DefaultUICulture": "ko-KR",
+    "SupportedCultures": [
+      "ko-KR"
+    ],
+    "TimeZone": "Korea Standard Time"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
