Inquery_seoyon 추가

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,28 @@
 {
-  "Globalization": {
-    "DefaultCulture": "ko-KR",
-    "DefaultUICulture": "ko-KR",
-    "SupportedCultures": [
-      "ko-KR"
-    ],
-    "TimeZone": "Korea Standard Time"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Globalization": {
+        "DefaultCulture": "ko-KR",
+        "DefaultUICulture": "ko-KR",
+        "SupportedCultures": [
+            "ko-KR"
+        ],
+        "TimeZone": "Korea Standard Time"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    //"urls": "http://*:85;http://*:8058;",
+    "Kestrel": {
+        "Endpoints": {
+            //"Http": {
+            //    "Url": "http://*:8058"
+            //}
+            "Https": {
+                "Url": "https://localhost:5000"
+            }
+        }
+    },
+    "AllowedHosts": "*"
 }
