서버 설정 수정

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,14 +13,13 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    //"urls": "http://*:85;http://*:8058;",
     "Kestrel": {
         "Endpoints": {
-            //"Http": {
-            //    "Url": "http://*:8058"
-            //}
+            "Http": {
+                "Url": "http://localhost:5000"
+            },
             "Https": {
-                "Url": "https://localhost:5000"
+                "Url": "https://localhost:5001"
             }
         }
     },
